# fandango

./: .gitattributes  Cargo.toml  README.md  requirements.txt
.github/workflows/: ci-cd.yml
k8s/monitoring/: grafana.yaml  mod.rs  prometheus.yaml  wasm_config.yaml
k8s/test/: multi-pod-test.yaml  test-pod.yaml
src/python/: ir_generator.py  kvcache.py  mermaid_flow.py  scheduler.py
src/rust/: lib.rs  main.rs  utils.rs
src/rust/caas_lsm/: compaction_agent.rs  control_plane.rs
src/rust/cognitive_modeling/: mcmc_search.rs  mod.rs
src/rust/fused_attention_kernels/: cuda_triton.rs  distiller.rs  fused_attention.rs  memory_layout.rs  memory_management.rs  mod.rs  sparsity_manager.rs  speculative_decoding.rs  wasm.rs
src/rust/fused_attention_kernels/memory_management/: mod.rs
src/rust/ir_generator/: mod.rs  precision_plan.rs  profiling.rs
src/rust/kvcache_manager/: attention_locality.rs  buffer.rs  deduplication.rs  entropy_heuristics.rs  eviction.rs  kv_cache.rs  mod.rs  monitoring.rs  prefetching.rs  quantization.rs
src/rust/monitoring/: mod.rs
src/rust/nebula_integration/: nebula_store.rs
src/rust/q_lora/: q_lora.rs
src/rust/quantization/: int8_matmul.rs
src/rust/quantized_model_loader/: mod.rs
src/rust/runtime_scheduler/: mod.rs  model_loader.rs
src/rust/storage_engine/: cosine_integration.rs  design_space.rs  learned_structures.rs  mod.rs  self_design.rs
