[package]
name = "fandango"
version = "0.1.0"
edition = "2021"

description = "Fandango - High-performance attention mechanisms for deep learning"
authors = ["Your Name <your.email@example.com>"]
license = "Apache-2.0"
repository = "https://github.com/yourusername/fandango"
keywords = ["deep-learning", "attention", "transformer", "machine-learning"]
categories = ["machine-learning", "deep-learning"]

[lib]
path = "src/rust/lib.rs"
name = "fandango"

[[bin]]
name = "fandango"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1.32", features = ["full", "rt-multi-thread", "macros"] }
log = "0.4"
candle-core = { git = "https://github.com/huggingface/candle.git", features = ["metal"] }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
thiserror = "1.0"
anyhow = "1.0"
ndarray = { version = "0.15", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
rayon = "1.8"
serde_json = "1.0"
parking_lot = "0.12"
simple_logger = "4.2.0"

[dev-dependencies]
actix-rt = "2.5" # Runtime for testing

[features]
default = ["metal"]
metal = ["candle-core/metal"]
cuda = ["candle-core/cuda"]
enterprise = [] # Enable privileged features for Enterprise tier

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false