[package]
name = "fandango"
version = "0.1.0"
edition = "2021"

description = "Fandango - High-performance attention mechanisms for deep learning"
authors = ["Your Name <your.email@example.com>"]
license = "Apache-2.0"
repository = "https://github.com/yourusername/fandango"
keywords = ["deep-learning", "attention", "transformer", "machine-learning"]
categories = ["machine-learning", "deep-learning"]

[lib]
path = "src/rust/lib.rs"
name = "fandango"

[[bin]]
name = "fandango"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1.32", features = ["full", "rt-multi-thread", "macros"], optional = true }
log = "0.4"
candle-core = { git = "https://github.com/huggingface/candle.git", features = ["metal"], default-features = false }
candle-nn = { git = "https://github.com/huggingface/candle.git", default-features = false }
thiserror = "1.0"
anyhow = "1.0"
ndarray = { version = "0.15", features = ["rayon"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
rayon = { version = "1.8", optional = true }
rand = "0.8.5"
serde_json = { version = "1.0", optional = true }
parking_lot = { version = "0.12", optional = true }
simple_logger = { version = "4.2.0", optional = true }

[dev-dependencies]
actix-rt = "2.5" # Runtime for testing

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = ["metal", "std"]
std = [
    "tokio",
    "ndarray",
    "serde",
    "rayon",
    "serde_json",
    "parking_lot",
    "simple_logger",
]
metal = ["candle-core/metal"]
cuda = ["candle-core/cuda"]
wasm = [
    "dep:wasm-bindgen",
    "dep:js-sys",
]
quantized_model_loader = []
fused_attention = []
enterprise = [] # Enable privileged features for Enterprise tier

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false